# mpox-luminex-qc

./: .gitignore  =3.0  README.md  SPECIFICATION.md  mpox-luminex-qc-win.spec  mpox-luminex-qc.spec  pyproject.toml  run.py
.github/workflows/: build.yml
assets/: app_icon.icns
examples/: EXAMPLE01-MP0000-GK00-P01-12PLXMPXVSERUMTS.csv  EXAMPLE02-MP0000-GK00-P02-12PLXMPXVSERUMTS.csv
scripts/: anonymize_example.py  build_mac.sh  generate_test_data.py  make_icon.py
src/: app.py  classify.py  config.py  main.py  parse_layout.py  parse_xponent.py  pipeline.py  plate_summary.py  qc_beads.py  qc_history.py  qc_kit_controls.py  qc_nc.py  qc_replicates.py  qc_sample_labels.py  qc_standard_curve.py  report.py  settings.py
templates/: report.html
templates/web/: index.html  settings.html
